# superposition

./: .denv  .dir-locals.el  .dockerignore  .editorconfig  .env  .env.example  .envrc  .gitignore  .rustfmt.toml  3  AUTOMATED_DEPLOYMENT_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DockerFile  Dockerfile  Jenkinsfile  LICENSE  PERF_ANALYSIS_INDEX.md  PERF_ANALYSIS_RESOLUTION.md  PLAN-embeddable-admin-ui.md  README.md  RUSTY_SMITH_GUIDE.md  RUST_IDIOMS_REVIEW.md  SMITHY_TRANSPILER_GUIDE.md  Superposition.cac.toml  TODO.md  TOML_BINDINGS_SUMMARY.md  clip  cog.toml  context7.json  cypress.config.js  datron-contributions-summary.md  dev_cac.sql  dev_ex.sql  dev_experimentation.sql  diesel.toml  docker-compose.yaml  example.DockerFile  example.Dockerfile  (+35 more)
backend/: .env  Cargo.toml  docker-compose.yaml  flake.nix  makefile
backend/docker-compose/postgres/: Dockerfile
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/scripts/: server-setup.sh  tables.sql
backend/src/: main.rs
backend/src/api/: context_overrides.rs  contexts.rs  dimensions.rs  global_config.rs  mod.rs  overrides.rs
backend/src/db/: schema.rs
backend/src/handlers/: context_overrides.rs  contexts.rs  dimensions.rs  global_config.rs  mod.rs  new_contexts.rs  overrides.rs
backend/src/messages/: context_overrides.rs  contexts.rs  mod.rs  new_contexts.rs  overrides.rs
backend/src/model/: dimensions.rs  global_config.rs  mod.rs
backend/src/models/: db_models.rs  mod.rs
backend/src/utils/: errors.rs  helpers.rs  mod.rs  validations.rs
clients/rust/: Cargo.toml
clients/rust/.cargo/: config.toml
clients/rust/src/: lib.rs
crates/cac_client/: CHANGELOG.md  Cargo.toml  build.rs  default.nix
crates/cac_client/src/: eval.rs  interface.rs  lib.rs  utils.rs
crates/cac_demo_app/: Cargo.toml  README.md
crates/cac_demo_app/data/: demo_app_db_dump.sql
crates/cac_demo_app/src/: main.rs  main_surge_pricing.rs
crates/cac_toml/: CHANGELOG.md  Cargo.toml
crates/cac_toml/src/: bin.rs  lib.rs
crates/caclang/: CHANGELOG.md  Cargo.toml  cac_example.toml  mjos.toml
crates/caclang/src/: bin.rs  helpers.rs  lib.rs  parse.rs
crates/context-aware-config/: CHANGELOG.md  Cargo.toml  diesel.toml  package-lock.json
crates/context-aware-config/src/: auth.rs  helpers.rs  lib.rs  logger.rs  main.rs  validation_functions.rs
crates/context-aware-config/tests/: cac_tests.rs
crates/context_aware_config/: CHANGELOG.md  Cargo.toml  diesel.toml  invoker.md  package-lock.json  package.json  scratch
crates/context_aware_config/src/: api.rs  helpers.rs  lib.rs  middlewares.rs  rusty_runtime.rs  types.rs  validation_functions.rs
crates/context_aware_config/tests/: cac_tests.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  core.h  experiment.rs  ffi.rs  ffi_legacy.rs  lib.rs
crates/experimentation-platform/: CHANGELOG.md  Cargo.toml  diesel.toml
crates/experimentation-platform/src/: lib.rs  schema.patch
crates/experimentation-platform/tests/: experimentation_tests.rs
crates/experimentation_client/: CHANGELOG.md  Cargo.toml  build.rs
crates/experimentation_client/src/: interface.rs  lib.rs  types.rs
crates/experimentation_client_integration_example/: Cargo.toml
crates/experimentation_client_integration_example/src/: main.rs
crates/experimentation_db/: Cargo.toml  diesel.toml
crates/experimentation_db/src/: lib.rs  schema.patch
crates/experimentation_platform/: CHANGELOG.md  Cargo.toml
crates/experimentation_platform/src/: api.rs  lib.rs  schema.patch
crates/experimentation_platform/tests/: experimentation_tests.rs
crates/frontend/: CHANGELOG.md  Cargo.toml  tailwind.config.js
crates/frontend/assets/: json-viewer.js  utils.js
crates/frontend/npm/: .npmignore  DEVELOPMENT.md  README.md  build-npm.sh  example.html  index.d.ts  index.js  package.json
crates/frontend/src/: api.rs  app.rs  bindings.rs  components.rs  core.rs  form_types.rs  hoc.rs  lib.rs  logic.rs  pages.rs  providers.rs  query_updater.rs  routes.rs  schema.rs  types.rs  utils.rs
crates/frontend/src-js/: utils.js
crates/frontend/styles/: tailwind.css
crates/rusty_smith/: Cargo.toml  README.md
crates/rusty_smith/examples/: simple.rs
crates/rusty_smith/src/: codegen.rs  lib.rs  parser.rs
crates/service-utils/: CHANGELOG.md  Cargo.toml
crates/service-utils/src/: helpers.rs  lib.rs  macros.rs  result.rs  types.rs
crates/service_utils/: CHANGELOG.md  Cargo.toml
crates/service_utils/examples/: list_actions.rs
crates/service_utils/src/: aws.rs  db.rs  encryption.rs  extensions.rs  helpers.rs  kronos_dispatch.rs  lib.rs  macros.rs  middlewares.rs  observability.rs  redis.rs  registry.rs  service.rs  workspace_lock.rs
crates/service_utils/tests/: action_registry_test.rs  observability_integration.rs
crates/superposition/: Cargo.toml  Superposition.cac.toml
crates/superposition/examples/: generate_actions_registry.rs
crates/superposition/src/: app_state.rs  auth.rs  job.rs  log_span.rs  main.rs  mcp.rs  resolve.rs  webhooks.rs  workspace.rs
crates/superposition_client/: CHANGELOG.md  Cargo.toml  build.rs  default.nix
crates/superposition_client/src/: lib.rs  (+2 more)
crates/superposition_client_integration_example/: Cargo.toml
crates/superposition_core/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/superposition_derives/: CHANGELOG.md  Cargo.toml  README.md
crates/superposition_macros/: CHANGELOG.md  Cargo.toml
crates/superposition_mcp/: CHANGELOG.md  CODEGEN_PLAN.md  Cargo.toml  README.md
crates/superposition_mcp_server/: Cargo.toml
crates/superposition_provider/: CHANGELOG.md  Cargo.toml  README.md  example.rs
mcp-server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_mcp.py
mcp-server/scripts/: install.sh  setup.sh
mcp-server/tests/: README.md  TESTING_GUIDE.md  __init__.py  conftest.py  pytest.ini  requirements.txt  test_runner.py
server/: .gitignore  CHANGELOG.md  Cargo.toml  package.yaml  server.cabal  stack.yaml
server/app/: Main.hs
server/src/: Server.hs  Types.hs  main.rs
(+4883 files in other folders)
