[workspace]
resolver = "2"

members = [
    "crates/service_utils",
    "crates/context_aware_config",
    "crates/experimentation_platform",
    "crates/service_utils",
    "crates/experimentation_client",
    "crates/cac_client",
    "crates/frontend",
    "crates/cac_toml",
    "crates/superposition",
    "crates/superposition_types",
    "examples/experimentation_client_integration_example",
    "examples/cac_client_integration_example",
    "examples/superposition-demo-app",
    "crates/superposition_macros",
    "crates/superposition_derives",
]

[[workspace.metadata.leptos]]
name = "cac"
bin-package = "juspay_superposition"
output-name = "frontend"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "crates/frontend/styles/style.css"
assets-dir = "crates/frontend/assets"

[workspace.dependencies]
actix-web = "4.5.0"
anyhow = "1.0.75"
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "^0.99"
diesel = { version = "2.1.0", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "chrono",
    "uuid",
    "postgres_backend",
] }
jsonlogic = { git = "https://github.com/juspay/jsonlogic_rs.git", version = "0.5.3" }
jsonschema = "~0.17"
leptos = { version = "0.6.11" }
log = { version = "0.4.20", features = ["kv_unstable_serde"] }
once_cell = { version = "1.18.0" }
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
rs-snowflake = "0.6.0"
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "1.0" }
strum = "0.25"
strum_macros = "0.25"
toml = { version = "0.8.8", features = ["preserve_order"] }
uuid = { version = "1.3.4", features = ["v4", "serde"] }

[workspace.lints.clippy]
mod_module_files = "warn"
