[workspace]
resolver = "2"
package.license = "MIT OR Apache-2.0"
package.homepage = "https://juspay.io/open-source/superposition"
package.repository = "https://github.com/juspay/superposition"
package.readme = "README.md"
package.authors = ["superposition@juspay.in"]
package.version = "0.90.0"

members = [
    "crates/service_utils",
    "crates/context_aware_config",
    "crates/experimentation_platform",
    "crates/experimentation_client",
    "crates/cac_client",
    "crates/frontend",
    "crates/cac_toml",
    "crates/superposition",
    "crates/superposition_types",
    "crates/superposition_macros",
    "crates/superposition_derives",
    "crates/superposition_core",
    "crates/superposition_provider",
    "crates/superposition_sdk",
    "examples/experimentation_client_integration_example",
    "examples/cac_client_integration_example",
    "examples/superposition-demo-app",
]

[[workspace.metadata.leptos]]
name = "cac"
bin-package = "juspay_superposition"
output-name = "frontend"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "crates/frontend/styles/style.css"
assets-dir = "crates/frontend/assets"

[workspace.dependencies]
actix-web = "4.5.0"
anyhow = "1.0.75"
aws-sdk-kms = { version = "1.38.0" }
base64 = "0.21.2"
bigdecimal = { version = "0.3.1", features = ["serde"] }
cfg-if = "1.0.0"
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "^0.99"
diesel = { version = "2.2.4", package = "juspay_diesel", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "chrono",
    "uuid",
    "postgres_backend",
    "numeric",
] }
fred = { version = "9.2.1" }
futures-util = "0.3.28"
itertools = { version = "0.10.5" }
jsonlogic = { version = "0.5.5", package = "juspay_jsonlogic" }
jsonschema = "~0.17"
leptos = { version = "0.6.11" }
log = { version = "0.4.20", features = ["kv_unstable_serde"] }
once_cell = { version = "1.18.0" }
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
rs-snowflake = "0.6.0"
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "1.0.140" }
strum = "0.25"
strum_macros = "0.25"
toml = { version = "0.8.8", features = ["preserve_order"] }
url = "2.5.0"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
uniffi = { version = "0.29.3", features = [ "cli" ] }
superposition = { path = "crates/superposition", version = "0.90.0" }
superposition_types = { path = "crates/superposition_types", version = "0.90.0" }
superposition_derives = { path = "crates/superposition_derives", version = "0.90.0" }
superposition_macros = { path = "crates/superposition_macros", version = "0.90.0" }
superposition_core = { path = "crates/superposition_core", version = "0.90.0" }
superposition_provider = { path = "crates/superposition_provider", version = "0.90.0" }
superposition_sdk = { path = "crates/superposition_sdk", version = "0.90.0" }
service_utils = { path = "crates/service_utils", version = "0.90.0" }

[workspace.lints.clippy]
mod_module_files = "warn"
manual_range_contains = "allow"
