[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Https server framework
actix-web = "4"
# To help with generating uuids
uuid = {version = "^0.8", features = ["v4"]}
# To serialize and deserialize objects from json
serde = {version = "^1", features = ["derive"]}
serde_json = {version = "1.0"}
# For logging and debugging
env_logger = "0.8"
log = "^0.4"
# to work with enums
strum_macros = "^0.24"
strum = {version = "^0.24"}
derive_more = "^0.99"
# date and time 
chrono = { version = "0.4", features = ["serde"] }

