[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
open-feature = "0.2.5"
serde_json = "1.0"
thiserror = { version = "1.0.57" }
superposition-rust-sdk = { path = "../generated/smithy/rust" }
superposition_types = { path = "../../crates/superposition_types" }
superposition_core = { path = "../../crates/core" }
tokio = { version = "1.29.1", features = ["full"] }
