[package]
name = "cac_client"
version = "0.14.3"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
jsonlogic = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
superposition_types = { path = "../superposition_types" }
tokio = { version = "1.29.1", features = ["full"] }

[lib]
name = "cac_client"
crate-type = ["cdylib", "lib"]

[build-dependencies]
cbindgen = "0.26.0"

[lints]
workspace = true
