[package]
name = "cac_client"
description = "CAC Client provides interfaces for applications to interact with the context-aware-config module in superposition. Note: this is deprecated, please use the provider"
version.workspace = true
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
jsonlogic = { workspace = true, optional = true }
log = { workspace = true }
mini-moka = { version = "0.10.3" }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
superposition_types = { workspace = true, features = ["api"] }
tokio = { version = "1.29.1", features = ["full"] }

[features]
jsonlogic = ["dep:jsonlogic", "superposition_types/jsonlogic"]

[lib]
name = "cac_client"
crate-type = ["cdylib", "lib"]

[build-dependencies]
cbindgen = "0.26.0"

[lints]
workspace = true
