[package]
name = "cac_demo_app"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-files = "0.6"
awc = "3"
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "cac-demo-app"
path = "src/main.rs"

[[bin]]
name = "cac-demo-app-surge-pricing"
path = "src/main_surge_pricing.rs"
