[package]
name = "caclang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "caclang"
path = "src/lib.rs"

[[bin]]
name = "cac"
path = "src/bin.rs"


[dependencies]
toml = "0.8.8"
clap = { version = "4.3.0", features = ["derive"] }
inquire = "0.6.2"
regex = "1.9.1"
serde = "1.0.163"
anyhow = { workspace = true }
derive_more = { workspace = true }
evalexpr = "11.1.0"
strum_macros = { workspace = true }
strum = {workspace = true }
