[package]
name = "caclang"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "caclang"
path = "src/lib.rs"

[[bin]]
name = "cac"
path = "src/bin.rs"


[dependencies]
toml = "0.8.8"
clap = { version = "4.3.0", features = ["derive"] }
inquire = "0.6.2"
regex = { workspace = true }
serde = "1.0.163"
blake3 = { workspace = true }
anyhow = { workspace = true }
derive_more = { workspace = true }
evalexpr = "11.1.0"
log = { workspace = true }
env_logger = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
