[package]
name = "context-aware-config"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cac_client = { path = "../cac_client" }

# env
dotenv = "0.15.0"
# Https server framework
actix = "0.13.0"
actix-web = "4.0.0"
# To help generate snowflake ids
rs-snowflake = "0.6.0"
# To help with generating uuids
uuid = {version = "1.3.4", features = ["v4", "serde"]}
# To serialize and deserialize objects from json
serde = {version = "^1", features = ["derive"]}
serde_json = {version = "1.0"}
# For logging and debugging
env_logger = "0.8"
log = { version="0.4.20", features = ["kv_unstable_serde"] }
# to work with enums
strum_macros = "^0.24"
strum = {version = "^0.24"}
derive_more = "^0.99"
# date and time
chrono = { version = "0.4", features = ["serde"] }
# ORM
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "serde_json", "chrono", "uuid", "postgres_backend"] }
blake3 = "1.3.3"
rusoto_kms = "0.48.0"
rusoto_signature = "0.48.0"
bytes = "1.4.0"
rusoto_core = "0.48.0"
base64 = "0.21.2"
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
urlencoding = "~2.1.2"
jsonschema = "~0.17"
reqwest = { version = "*", features = [ "rustls-tls" ] }
json-patch = "1.0.0"
rand = "0.8.5"
service-utils = { path = "../service-utils" }
experimentation-platform = { path = "../experimentation-platform"}
tracing-actix-web = "0.7.6"
tracing-log = "0.1.3"
tracing = { version = "0.1.37", features = ["valuable"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"]}
valuable = { version = "0.1.0", features = ["std", "alloc", "derive"]}
futures = "0.3.28"
actix-http = "3.3.1"
futures-util = "0.3.28"
external = { path = "../external"}
