[package]
name = "context-aware-config"
version = "0.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cac_client = { path = "../cac_client" }
frontend = {path ="../frontend" }

# env
dotenv = { workspace = true }
# Https server framework
actix = { workspace = true }
actix-web = { workspace = true }
# To help generate snowflake ids
rs-snowflake = { workspace = true }
# To help with generating uuids
uuid = { workspace = true }
# To serialize and deserialize objects from json
serde = { workspace = true }
serde_json = { workspace = true }
# For logging and debugging
env_logger = { workspace = true }
log = { workspace = true }
# to work with enums
strum_macros = "^0.24"
strum = {version = "^0.24"}
derive_more = { workspace = true }
# date and time
chrono = { workspace = true }
# ORM
diesel = { workspace = true }
blake3 = "1.3.3"
rusoto_kms = { workspace = true }
rusoto_signature = { workspace = true }
bytes = { workspace = true }
rusoto_core = { workspace = true }
base64 = { workspace = true }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
urlencoding = { workspace = true }
jsonschema = { workspace = true }
reqwest = { workspace = true , features = [ "rustls-tls" ] }
json-patch = { workspace = true }
rand = { workspace = true }
service-utils = { path = "../service-utils" }
experimentation-platform = { path = "../experimentation-platform"}
tracing-actix-web = "0.7.6"
tracing-log = "0.1.3"
tracing = { version = "0.1.37", features = ["valuable"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"]}
valuable = { version = "0.1.0", features = ["std", "alloc", "derive"]}
futures = "0.3.28"
actix-http = "3.3.1"
futures-util = "0.3.28"
external = { path = "../external"}
actix-cors = "0.6.4"
leptos_actix = { version = "0.4.10" }
leptos = { version = "0.4" }
leptos_meta = { version = "0.4" }
leptos_router = { version = "0.4" }
actix-files = { version = "0.6" }

anyhow = { workspace = true }
dashboard-auth = { workspace = true }
