[package]
name = "context_aware_config"
version = "0.51.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-http = "3.3.1"
actix-web = { workspace = true }
anyhow = { workspace = true }
bigdecimal = { workspace = true }
blake3 = "1.3.3"
cac_client = { path = "../cac_client" }
cfg-if = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
diesel = { workspace = true, features = ["numeric"] }
fred = { workspace = true, optional = true, features = ["metrics"] }
futures-util = { workspace = true }
itertools = { workspace = true }
jsonlogic = { workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
num-bigint = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
service_utils = { path = "../service_utils" }
superposition_macros = { path = "../superposition_macros" }
superposition_types = { path = "../superposition_types", features = [
    "api",
    "result",
    "diesel_derives",
] }
uuid = { workspace = true }

[features]
disable_db_data_validation = ["superposition_types/disable_db_data_validation"]
high-performance-mode = ["dep:fred"]

[lints]
workspace = true
