[package]
name = "context_aware_config"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-http = "3.3.1"
actix-web = { workspace = true }
anyhow = { workspace = true }
bigdecimal = { workspace = true }
blake3 = "1.3.3"
cac_client = { path = "../cac_client" }
cfg-if = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = ["numeric"] }
fred = { workspace = true, optional = true, features = ["metrics"] }
itertools = { workspace = true }
jsonlogic = { workspace = true, optional = true }
jsonschema = { workspace = true }
log = { workspace = true }
num-bigint = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
service_utils = { workspace = true }
superposition_macros = { workspace = true }
superposition_types = { workspace = true, features = [
    "api",
    "result",
    "diesel_derives",
    "server",
] }
uuid = { workspace = true }

[features]
disable_db_data_validation = ["superposition_types/disable_db_data_validation"]
high-performance-mode = ["dep:fred"]
jsonlogic = [
    "dep:jsonlogic",
    "cac_client/jsonlogic",
    "service_utils/jsonlogic",
    "superposition_types/jsonlogic",
]

[lints]
workspace = true
