[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
jsonlogic = { workspace = true }
log = { workspace = true }
mini-moka = { version = "0.10.3" }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
superposition_types = { path = "../superposition_types" }
tokio = { version = "1.29.1", features = ["full"] }
serde = { workspace = true }
uniffi = { workspace = true }

[dev-dependencies]
uniffi = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
name = "superposition"
