[package]
name = "experimentation-platform"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# env
dotenv = { workspace = true }
# Https server framework
actix = { workspace = true }
actix-web = { workspace = true }
# To help generate snowflake ids
rs-snowflake = { workspace = true }
# To help with generating uuids
uuid = { workspace = true }
# To serialize and deserialize objects from json
serde = { workspace = true }
serde_json = { workspace = true }
# For logging and debugging
env_logger = { workspace = true }
log = { workspace = true }
# to work with enums
derive_more = { workspace = true }
# date and time
chrono = { workspace = true }
# ORM
diesel = { workspace = true }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
service-utils = { path = "../service-utils" }
reqwest = { workspace = true }
dashboard-auth = { workspace = true }
