[package]
name = "experimentation_client"
version = "0.14.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
derive_more = { workspace = true }
jsonlogic = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
superposition_types = { path = "../superposition_types", features = [
    "experimentation",
    "api",
] }
tokio = { version = "1.29.1", features = ["full"] }

[lib]
name = "experimentation_client"
crate-type = ["cdylib", "lib"]

[build-dependencies]
cbindgen = "0.26.0"

[lints]
workspace = true
