[package]
name = "experimentation_client"
version.workspace = true
edition = "2021"

[dependencies]
cfg-if = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
jsonlogic = { workspace = true, optional = true }
log = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
superposition_types = { workspace = true, features = [
    "experimentation",
    "api",
] }
tokio = { version = "1.29.1", features = ["full"] }

[features]
jsonlogic = ["dep:jsonlogic", "superposition_types/jsonlogic"]

[lib]
name = "experimentation_client"
crate-type = ["cdylib", "lib"]

[build-dependencies]
cbindgen = "0.26.0"

[lints]
workspace = true
