[package]
name = "experimentation_client"
description = "experimentation Client provides interfaces for applications to interact with the experimentation module in superposition. Note: this is deprecated, please use the provider"
version.workspace = true
edition = "2021"
rust-version = "1.82.0"

[dependencies]
chrono = { workspace = true }
derive_more = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
superposition_types = { workspace = true, features = [
    "experimentation",
    "api",
] }
tokio = { version = "1.29.1", features = ["full"] }


[lib]
name = "experimentation_client"
crate-type = ["cdylib", "lib"]

[build-dependencies]
cbindgen = "0.26.0"

[lints]
workspace = true
