[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
experimentation_client = { path = "../experimentation_client" }
chrono = { workspace = true }

# Https server framework
actix = { workspace = true }
actix-web = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
