[package]
name = "experimentation_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true, optional = true }
diesel-derive-enum = { version = "2.0.1", features = [
    "postgres",
], optional = true }
serde = { workspace = true }

[features]
diesel_derives = ["dep:diesel", "dep:diesel-derive-enum"]

[lints]
workspace = true
