[package]
name = "experimentation_platform"
version = "0.32.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-http = "3.3.1"
anyhow = { workspace = true }
blake3 = "1.3.3"
cac_client = { path = "../cac_client" }
chrono = { workspace = true }
diesel = { workspace = true }
log = { workspace = true }
jsonlogic = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service_utils = { path = "../service_utils" }
superposition_macros = { path = "../superposition_macros" }
superposition_types = { path = "../superposition_types", features = [
    "api",
    "experimentation",
    "result",
    "diesel_derives",
] }

[features]
disable_db_data_validation = ["superposition_types/disable_db_data_validation"]

[lints]
workspace = true
