[package]
name = "experimentation_platform"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-http = "3.3.1"
anyhow = { workspace = true }
blake3 = "1.3.3"
cac_client = { path = "../cac_client" }
cfg-if = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
experimentation_client = { path = "../experimentation_client" }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service_utils = { workspace = true }
superposition_macros = { workspace = true }
superposition_types = { workspace = true, features = [
    "api",
    "experimentation",
    "result",
    "diesel_derives",
    "server",
] }

[features]
disable_db_data_validation = ["superposition_types/disable_db_data_validation"]
jsonlogic = [
    "cac_client/jsonlogic",
    "experimentation_client/jsonlogic",
    "service_utils/jsonlogic",
    "superposition_types/jsonlogic",
]

[lints]
workspace = true
