[package]
name = "experimentation_platform"
description = "experimentation-platform leverages the power of context-aware-config to allow for N variant experiments and A/B releases"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-http = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
cac_client = { path = "../cac_client" }
chrono = { workspace = true }
diesel = { workspace = true }
experimentation_client = { path = "../experimentation_client" }
fred = { workspace = true, features = ["metrics"] }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
service_utils = { workspace = true }
superposition_derives = { workspace = true }
superposition_macros = { workspace = true }
superposition_types = { workspace = true, features = [
    "api",
    "experimentation",
    "result",
    "diesel_derives",
    "server",
] }

[features]
disable_db_data_validation = ["superposition_types/disable_db_data_validation"]

[lints]
workspace = true
